--- a/views/_navigation.haml
+++ b/views/_navigation.haml
@@ -5,7 +5,7 @@
   %a{:href => "/logout"} Logout <strong>(#{@person.username})</strong>
 - else
   %form{:action => '/login', :method => :POST}
-    Username
+    UsernameArse
     %input{:name => 'username', :type => 'text', :size => 10}
     Password
     %input{:name => 'password', :type => 'password', :size => 10}
