* Tidied up mauveserver to handle HUP restarts  * Added HTML santizing to the alert class, so bad HTML is stripped as part of    processing.  * Alert#cleared? now means "not raised"  * Better error handling in the Timer class, making sure that the timer never    gets permanently frozen.  * Moved notification and packet buffers to the Server class, meaning that if    the Processor or Notifier threads crash, we don't lose all the items waiting    to be processed/notified.  * XMPP/Email Alerts now use templates, instead of instance methods.  * Emails now get sent as multipart with HTML to allow detail fields to be    shown as nature intended.

--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -1,1 +1,14 @@
-<%=arse %>
+<%= alert.update_type.upcase %>: <% 
+case alert.update_type 
+when :cleared 
+%><%= MauveTime.now.to_s_relative(alert.cleared_at.to_time) %><% 
+when :acknowleged 
+%><%= MauveTime.now.to_s_relative(alert.acknowledged_at.to_time) %><% 
+else
+%><%= MauveTime.now.to_s_relative(alert.raised_at.to_time) %><% 
+end 
+%>: <%= alert.summary %><%
+if alert.source != alert.subject 
+%> -- from <%= alert.source %><%
+end 
+%>.
