--- a/lib/mauve/notifiers/templates/email.txt.erb
+++ b/lib/mauve/notifiers/templates/email.txt.erb
@@ -13,7 +13,7 @@ if alert.source != alert.subject
 end 
 %>.
 
--- Details ------------------------------------------------------------
+-- Detail ------------------------------------------------------------
 
 <%= Sanitize.clean(alert.detail) %>
 
