--- a/views/preferences.haml
+++ b/views/preferences.haml
@@ -1,24 +1,1 @@
-!!!
-%html
-  %head
-    %title #{@title}: My preferences (logged in as #{@person.username})
-    %link{:rel => "stylesheet", :href => "/alerts.css"}
-    %script{:type => "text/javascript", :src => "/prototype.js"}
-    %script{:type => "text/javascript", :src => "/mauve_utils.js"}
-    %script{:type => "text/javascript", :src => "/datadumper.js"}
-  %body{:onLoad => "addAutoHover(); addRefresh();"}
-    #header
-      %h1= @title
-    #errors{:style => "display: none;"}
-      %h1 
-        Trouble!
-        (
-        %a{:href=>"#", :onClick => "clearErrors();"} hide
-        )
-      %ul#errors_list
-      %p Either the alert server or your internet connection is malfunctioning, so you may want to try refreshing the page.
-    #alert_counts= partial("alert_counts")
-    #navigation= partial("navigation")
-    %h1 Not implemented yet
-
-
+not_implemented.haml
