--- a/views/login.haml
+++ b/views/login.haml
@@ -1,27 +1,17 @@
-!!! XML
-!!!
+!!! 5
 %html
-  %head
-    %meta{:name=>"viewport", :content=>"width=device-width"}/
-    %title #{@title}: Authentication required
-    %link{:rel => "stylesheet", :href => "/stylesheets/bytemark.css"}/
-    %link{:rel => "stylesheet", :href => "/stylesheets/mauve.css"}/
-    %script{:src => 'javascript/jquery/jquery.js', :type => 'text/javascript'}
+  =partial("head")
   %body
     = partial('navbar')
-    %h1 Mauve Alerts
-    - if flash['error']
-      %p.error= flash['error']
-    %form{:action => '/login', :method => :POST}
-      %fieldset
-        %legend Please log in
-        %label{:for => "username"} Username
-        %input{:name => 'username', :type => 'text'}/
-        %br
-        %label{:for => "password", :title => "This is either your Single Sign On password or a PIN."} Password / PIN
-        %input{:name => 'password', :type => 'password'}/
-        %br
-        %input{:type => 'hidden', :name => 'next_page', :value => @next_page}/
-        %input{:type => 'submit', :value => 'Log in'}/
-
-
+    .container
+      %form{:action => '/login', :method => :POST}
+        %fieldset
+          %legend Please log in
+          %label{:for => "username"} Username
+          %input{:name => 'username', :type => 'text', :autocorrect => "off", :autocapitalize => "off"}/
+          %br
+          %label{:for => "password", :title => "This is either your Single Sign On password or a PIN."} Password / PIN
+          %input{:name => 'password', :type => 'password'}/
+          %br
+          %input{:type => 'hidden', :name => 'next_page', :value => @next_page}/
+          %input{:type => 'submit', :value => 'Log in'}/
