Rejigged column names.. and javascript location.
--HG--
rename : static/mauve_utils.js => static/javascript/mauve_utils.js

--- a/views/_alerts_table_alert_summary.haml
+++ b/views/_alerts_table_alert_summary.haml
@@ -6,5 +6,8 @@
     %label{ :for => "alerts[#{alert.id}]" }
       %strong= alert.subject
       = alert.summary
-    %a{ :id => ["a","detail", alert.id], :href => "/alert/#{alert.id}", :onclick => "fetchDetail('#{alert.id}'); return false;"} Details &darr;
+    %a{ :id => ["a","detail", alert.id], | 
+        :href => "/alert/#{alert.id}",   |
+        :onclick => "fetchDetail('#{alert.id}'); return false;"} 
+      Details &darr;
   %td= alert.raised_at.to_s_relative
