* Alert detail now has default message.   * It is now interpreted as textile.

--- a/views/_alerts_table_alert_detail.haml
+++ b/views/_alerts_table_alert_detail.haml
@@ -2,7 +2,8 @@
   %td &nbsp;
   %td{:colspan => 2}
     .detail
-      = alert.detail
+      :textile
+        #{alert.detail}
       %address
         - if alert.raised? or alert.acknowledged?
           Raised at #{alert.raised_at.to_s_human} &bull;
