--- a/views/_alerts_table.haml
+++ b/views/_alerts_table.haml
@@ -1,19 +1,14 @@
-%form#alerts{:method => :post, :action => '/alerts/acknowledge'}
-  %table
-    %tr
-      %th#selector
-        %input#toggle_all{ :type => "checkbox" }
-        :javascript
-          // This just toggles all the checkboxes.
-          $('#toggle_all').change( function() {
-            $('input.alert').each( function(index) {
-              this.checked = !this.checked;
-            });
+%table#alerts_table
+  %tr
+    %th#selector
+      %input#toggle_all{ :type => "checkbox" }
+      :javascript
+        // This just toggles all the checkboxes.
+        $('#toggle_all').change( function() {
+          $('input.alert').each( function(index) {
+            this.checked = !this.checked;
           });
-      %th#summary Summary
-      %th#time    At
-    = partial("alerts_table_group", :collection => @grouped_alerts)
-    %tr
-      %td &nbsp;
-      %td{:colspan => 2}
-        = partial("acknowledge_input")
+        });
+    %th#summary Summary
+    %th#time    At
+  = partial("alerts_table_group", :collection => @grouped_alerts)
