--- a/views/_head.haml
+++ b/views/_head.haml
@@ -5,4 +5,5 @@
   %link{:rel => "stylesheet", :href => "/stylesheets/mauve.css", :media => "all", :type => "text/css"}/
   %link{:rel => "stylesheet", :href => "/stylesheets/mauve-handheld.css", :media => "handheld, only screen and (max-width: 1000px), only screen and (max-device-width: 1000px)", :type => "text/css" }/
   %script{:src => '/javascript/jquery/jquery.min.js', :type => 'text/javascript'}
+  %script{:src => '/javascript/jquery.periodicalupdater.js', :type => 'text/javascript'}
   %script{:src => '/javascript/mauve_utils.js', :type => 'text/javascript'}
