--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -1,11 +1,11 @@
 <%= alert.update_type.upcase %>: <% 
 case alert.update_type 
 when :cleared 
-%><%= MauveTime.now.to_s_relative(alert.cleared_at.to_time) %><% 
+%><%= alert.cleared_at.to_s_relative %><% 
 when :acknowleged 
-%><%= MauveTime.now.to_s_relative(alert.acknowledged_at.to_time) %><% 
+%><%= alert.acknowledged_at.to_time.to_s_relative %><% 
 else
-%><%= MauveTime.now.to_s_relative(alert.raised_at.to_time) %><% 
+%><%= alert.raised_at.to_s_relative %><% 
 end 
 %>: <%= alert.subject %> <%= alert.summary %><%
 if alert.source != alert.subject 
