--- a/lib/mauve/notifiers/templates/email.html.erb
+++ b/lib/mauve/notifiers/templates/email.html.erb
@@ -4,11 +4,11 @@
 <p><strong><%= alert.update_type.upcase %>:</strong> <% 
 case alert.update_type 
 when :cleared 
-%><%= MauveTime.now.to_s_relative(alert.cleared_at.to_time) %><% 
+%><%= alert.cleared_at.to_s_relative %><% 
 when :acknowleged 
-%><%= MauveTime.now.to_s_relative(alert.acknowledged_at.to_time) %><% 
+%><%= alert.acknowledged_at.to_s_relative %><% 
 else
-%><%= MauveTime.now.to_s_relative(alert.raised_at.to_time) %><% 
+%><%= alert.raised_at.to_s_relative %><% 
 end 
 %>: <%= alert.summary %><%
 if alert.source != alert.subject 
