--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -1,13 +1,13 @@
 <%= alert.update_type.upcase %>: <% 
-case alert.update_type 
+case alert.update_type.to_sym 
 when :cleared 
 %><%= alert.cleared_at.to_s_relative %><% 
 when :acknowleged 
-%><%= alert.acknowledged_at.to_time.to_s_relative %><% 
+%><%= alert.acknowledged_at.to_s_relative %><% 
 else
 %><%= alert.raised_at.to_s_relative %><% 
 end 
-%>: <%= alert.subject %> <%= alert.summary %><%
+%>: <%= alert.subject %>: <%= alert.summary %><%
 if alert.source != alert.subject 
 %> -- from <%= alert.source %><%
 end 
