--- a/lib/mauve/notifiers/templates/email.html.erb
+++ b/lib/mauve/notifiers/templates/email.html.erb
@@ -2,7 +2,7 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><title></title></head><body>
 <p><strong><%= alert.update_type.upcase %>:</strong> <% 
-case alert.update_type 
+case alert.update_type.to_sym 
 when :cleared 
 %><%= alert.cleared_at.to_s_relative %><% 
 when :acknowleged 
@@ -10,7 +10,7 @@ when :acknowleged
 else
 %><%= alert.raised_at.to_s_relative %><% 
 end 
-%>: <%= alert.summary %><%
+%>: <%= alert.subject %>: <%= alert.summary %><%
 if alert.source != alert.subject 
 %> -- <em>from <%= alert.source %></em><%
 end 
