* Don't send acknowledged notifications unless the alert is raised  * Unacknowledge a cleared alert or a newly raised one  * Fixed interface unexpected nil errors.

--- a/views/_alerts_table_alert_summary.haml
+++ b/views/_alerts_table_alert_summary.haml
@@ -11,4 +11,4 @@
         :href => "/alert/#{alert.id}",   |
         :onclick => "fetchDetail('#{alert.id}'); return false;"} 
       Details &darr;
-  %td= alert.raised_at.to_s_relative
+  %td= (alert.raised_at || alert.cleared_at || Time.now).to_s_relative
