--- a/views/_alerts_table_alert_detail.haml
+++ b/views/_alerts_table_alert_detail.haml
@@ -6,7 +6,7 @@
         #{alert.detail}
       %address
         - if alert.raised? or alert.acknowledged?
-          Raised at #{alert.raised_at.to_s_human} &bull;
+          Raised at #{(alert.raised_at || Time.now).to_s_human} &bull;
         - if alert.acknowledged?
           Ack'd at #{alert.acknowledged_at.to_s_human} by #{alert.acknowledged_by} &bull;
         Source: #{alert.source} &bull;
