Fixed up some templates.

--- a/lib/mauve/notifiers/templates/email.html.erb
+++ b/lib/mauve/notifiers/templates/email.html.erb
@@ -17,6 +17,6 @@ end
 %>.</p>
 <hr />
 <h2>Detail</h2>
-<div><%=alert.detail %></div>
+<div><%= RedCloth.new(alert.detail).to_html %></div>
 <hr />
 <address>--<br />Love mauve<br />xxx.</address></body></html>
