--- a/lib/mauve/notifiers/templates/email.txt.erb
+++ b/lib/mauve/notifiers/templates/email.txt.erb
@@ -15,7 +15,7 @@ end
 
 -- Detail ------------------------------------------------------------
 
-<%= Sanitize.clean(alert.detail) %>
+<%= Alert.remove_html(alert.detail) %>
 
 -----------------------------------------------------------------------
 
