--- a/lib/mauve/notifiers/templates/email.txt.erb
+++ b/lib/mauve/notifiers/templates/email.txt.erb
@@ -1,8 +1,8 @@
 <%= alert.update_type.upcase %>: <% 
-case alert.update_type.to_sym
-when :cleared 
+case alert.update_type
+when "cleared"
 %><%= alert.cleared_at.to_s_relative %><%
-when :acknowledged 
+when "acknowledged"
 %><%= alert.acknowledged_at.to_s_relative %> by <%= alert.acknowledged_by %><% 
 else
 %><%= alert.raised_at.to_s_relative %><% 
