Big commit  * Added manpages for all binaries  * Added log-reopening for mauvealert-server, and logrotate snippet  * mauveserver now adds a user on install, and runs as that user  * Big logging tidy-up  * Alert subjects are only overwritten by the source, when the subject in the databse is empty  * Removed various attr_writer methods that were being redifined  * Added a notes box to the acknowledge form, but this doesn't work yet

--- a/views/alert.haml
+++ b/views/alert.haml
@@ -47,7 +47,7 @@
     %th Notifications sent out
     %td
       %ul
-        - @alert.changes.each do |change|
+        - @alert.changes.first(10).each do |change|
           - if change.was_relevant?
             %li
               %strong= change.level 
@@ -59,8 +59,8 @@
   %tr
     %th History
     %td
-      %ul
-        - @alert.histories.each do |history|
+      %ul#histories
+        - @alert.histories.first(10).each do |history|
           %li
             = history.event
             at
