--- a/views/_acknowledge_input.haml
+++ b/views/_acknowledge_input.haml
@@ -7,7 +7,10 @@ Acknowledge these alerts for
   %option{ :value => "wallclock" }                       wall-clock
 hours
 %span#ack_until_text
-%input#ack_until{ :value => '', :type => :hidden, :name => 'ack_until' } 
+%input#ack_until{ :value => '', :type => :hidden, :name => 'ack_until' }
+%br
+with the note
+%input#note{ :name => 'note', :type => "text"}
 %input{ :type => 'submit', :value => 'Go!' } 
 :javascript
   // Change of value in the hours box
