* Fixed supressed spelling mistakes (sic)  * Added require thin_parser to http_server  * Fixed spurious thaw attempts in mauve_thread.

--- a/lib/mauve/notifiers/templates/email.txt.erb
+++ b/lib/mauve/notifiers/templates/email.txt.erb
@@ -19,9 +19,9 @@ end
 
 -----------------------------------------------------------------------
 
-<% if was_supressed and not is_suppressed 
+<% if was_suppressed and not is_suppressed 
 %>Better now.  Your notifications have now restarted.<% 
-elsif is_supressed and not was_suppressed 
+elsif is_suppressed and not was_suppressed 
 %>Too noisy!  Your notifications have been suppressed.<% end %>
 
 --
