--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -15,6 +15,6 @@ end
 if was_suppressed and not is_suppressed 
 %> Normal service has resumed.<%
 elsif is_suppressed and not was_suppressed
-%> Further alerts supressed until things calm down.<%
+%> Further alerts suppressed until things calm down.<%
 end 
 %>
