* Added heartbeat to remote mauve  * Added URLs to messages  * Added example configuration file  * Added various docs  * XMPP messages now XHTML and TXT  * Handling of MUC reconnection a bit better.

--- a/lib/mauve/notifiers/templates/email.txt.erb
+++ b/lib/mauve/notifiers/templates/email.txt.erb
@@ -3,7 +3,7 @@ case alert.update_type
 when "cleared"
 %><%= alert.cleared_at.to_s_relative %><%
 when "acknowledged"
-%><%= alert.acknowledged_at.to_s_relative %> by <%= alert.acknowledged_by %><% 
+%><%= alert.acknowledged_at.to_s_relative %> by <%= alert.acknowledged_by %> until <%= alert.will_unacknowledge_at.to_s_human %><% 
 else
 %><%= alert.raised_at.to_s_relative %><% 
 end 
