Updated interface to auto-update nicely.

--- a/views/_navbar.haml
+++ b/views/_navbar.haml
@@ -28,3 +28,5 @@
         #{flash[klass]}
     :javascript
       $(document).ready(function () { $('div.flash').delay(1000).fadeOut(2000);});
+  - else
+    %div{:class => ["flash", klass], :style => "display: none"}
