Added last updated at to alerts page.  Fixes #1831.  * Also upped timeouts from 5s to 30s for ajax list refreshes.

--- a/views/_alerts_table.haml
+++ b/views/_alerts_table.haml
@@ -12,3 +12,8 @@
     %th#summary Summary
     %th#time    At
   = partial("alerts_table_group", :collection => @grouped_alerts)
+  %tr
+    %td{ :colspan => 3}
+      %address
+        Last updated at 
+        = Time.now
