--- a/views/alerts.haml
+++ b/views/alerts.haml
@@ -8,5 +8,5 @@
     %p No alerts to display.
 :javascript
   // Do the magic updates..
-  setInterval("updateAlertsTable('#{@alert_type}','#{@group_by}');", 120000)
+  setTimeout("updateAlertsTable('#{@alert_type}','#{@group_by}');", 30000)
 
