Added note-ability (fixes 1146) Removed threaded notifications cos we don't need em. (ftw!)

--- a/views/_acknowledge_input.haml
+++ b/views/_acknowledge_input.haml
@@ -8,9 +8,9 @@ Acknowledge these alerts for
 hours
 %span#ack_until_text
 %input#ack_until{ :value => '', :type => :hidden, :name => 'ack_until' }
--# %br
--# with the note
--# %input#note{ :name => 'note', :type => "text"}
+%br
+with the note
+%input#note{ :name => 'note', :type => "text"}
 %input{ :type => 'submit', :value => 'Go!' } 
 :javascript
   // Change of value in the hours box
